--- a/trabalhos/CG-Trabalho4/.classpath
+++ b/trabalhos/CG-Trabalho4/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="gluegen-rt.jar"/>
 	<classpathentry kind="lib" path="jogl.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/IA-Tron"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
